# artifacts-keyring

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ps1
pipelines/: build-wheel.yml  build-wheels.yml  build.yml  ci.yml  pr.yml  validate-setup-bash.yml  validate-setup-ps.yml  validate-setup.yml
src/artifacts_keyring/: __init__.py  plugin.py  py_msal_credential_provider.py  support.py
src/tests/: test_backend.py
tests/: test_backend.py
