[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build binaries for everything supported by cibuildwheel, Python >= 3.7
# For local cibuildwheel debugging, you can build only a single version
# build = ["cp313-*"]

# For each platform below, don't build 32bit binaries, they aren't supported 
# by the .NET credential provider plugin
# cibuildwheel 3 will disable building pypy automatically
enable = "pypy"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
skip = ["*-win32"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
skip = ["*-macosx_i386", "*-macosx_x86"]

# Linux is distributed as a source distribution (sdist) only.
# For self-contained linux, users must install the linux-* artifacts-credprovider separately 
# and set the env variable ARTIFACTS_KEYRING_CREDENTIALPROVIDER_PATH to point to their local 
# credential provider install.
# [tool.cibuildwheel.linux] - removed, no platform wheels built for Linux