[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build binaries for everything supported by cibuildwheel, Python >= 3.7
# For local cibuildwheel debugging, you can build only a single version
# build = ["cp313-*"]

# For each platform below, don't build 32bit binaries, they aren't supported 
# by the .NET credential provider plugin (except for win-x86 which is now supported)
# cibuildwheel 3 will disable building pypy automatically
enable = "pypy"

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
skip = ["*-macosx_i386", "*-macosx_x86"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
skip = ["*-manylinux_i686", "*-musllinux*"]
manylinux-aarch64-image = "manylinux_2_28"