[bdist_wheel]
universal = 1

[metadata]
name = artifacts-keyring
version = 1.0.0
author = Microsoft Corporation
url = https://github.com/Microsoft/artifacts-keyring
license_file = LICENSE.txt
description = "Automatically retrieve credentials for Azure Artifacts."
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    keyring >= 16.0
    requests >= 2.20.0

[options.packages.find]
where=src

[options.entry_points]
keyring.backends =
    ArtifactsKeyringBackend = artifacts_keyring:ArtifactsKeyringBackend

[tool:pytest]
testpaths = tests
python_functions = test_*
python_files = test_*.py
