[bdist_wheel]
universal = 0

[metadata]
name = artifacts-keyring
version = 1.0.0rc0
author = Microsoft Corporation
url = https://github.com/Microsoft/artifacts-keyring
license = "MIT"
license_file = LICENSE.txt
description = "Automatically retrieve credentials for Azure Artifacts."
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir=
    =src
packages = find_namespace:
include_package_data = True
zip_safe = False
python_requires = >=3.9
install_requires =
    keyring >= 16.0
    requests >= 2.20.0

[options.package_data]
artifacts_keyring =
    plugins/**/*

[options.packages.find]
where=src

[options.entry_points]
keyring.backends =
    ArtifactsKeyringBackend = artifacts_keyring:ArtifactsKeyringBackend

[tool:pytest]
testpaths = src/tests
python_functions = test_*
python_files = test_*.py
